# Ai-Project-Planner

./: .dockerignore  .env.example  .gitignore  20251105-024242-progress.yaml  Dockerfile  README.md  app.py  app1.py  docker-compose.yml  helper.py  main.py  pyproject.toml  report.html
.github/workflows/: ci.yml  docker-build.yml
config/: agents.yaml  tasks.yaml
src/: __init__.py  agents.py  crew.py  models.py  tasks.py
tests/: test_basic.py
